# pyshare

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
pyshare/: __init__.py  share.py
tests/: test_share.py
tests/data/: elstar.csv  granny_smith.csv
